@@ -64,4 +64,15 @@ public class TestSchema {
       assertTrue(are.getMessage().contains("Duplicate field field_name in record RecordName"));
     }
   }
+
+  @Test
+  public void testCreateUnionVarargs() {
+    List<Schema> types = new ArrayList<Schema>();
+    types.add(Schema.create(Type.NULL));
+    types.add(Schema.create(Type.LONG));
+    Schema expected = Schema.createUnion(types);
+
+    Schema schema = Schema.createUnion(Schema.create(Type.NULL), Schema.create(Type.LONG));
+    assertEquals(expected, schema);
+  }
 }
